# text-mutator

./: .gitignore  Cargo.toml  README.md  SPEC.md  TODO.md  infra.md
.github/workflows/: ci.yml  frontend.yml  rust.yml
.infra/: main.bicep  parameters.bicepparam
.infra/modules/: acr.bicep  backend.bicep  identity.bicep  link.bicep
backend/: .env  Cargo.toml  Dockerfile  api.http  homophones.json
backend/src/: env.rs  handler.rs  homophones.rs  main.rs  models.rs  mutator.rs
docs/: TODO.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  api.tsx  index.css  models.tsx  useMutation.tsx
frontend/src/components/: MainDisplay.css  MainDisplay.tsx  MutationCard.css  MutationCard.tsx  MutationOptionsDisplay.css  MutationOptionsDisplay.tsx  ServerStatus.css  ServerStatus.tsx
frontend/src/components/MainDisplay/: MainDisplay.css  MainDisplay.tsx
frontend/src/components/Modal/: Modal.css  Modal.tsx
frontend/src/components/MutationCard/: MutationCard.tsx
frontend/src/components/MutationOptionsDisplay/: MutationOptionsDisplay.css  MutationOptionsDisplay.test.tsx  MutationOptionsDisplay.tsx  defaultMutationOptions.ts
frontend/src/components/ServerStatus/: ServerStatus.css  ServerStatus.test.tsx  ServerStatus.tsx
frontend/src/hooks/: useHealthcheck.tsx  useMutation.tsx
frontend/src/mutator/: Mutator.tsx  ServerStatus.tsx
infra/: main.bicep  parameters.bicepparam
infra/modules/: backend.bicep
src/: homophones.rs  main.rs  mutator.rs
(+4 files in other folders)
