[package]
name = "text-mutator"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8.3", features = ["macros"]}
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.97"
dotenvy = "0.15.7"
uuid = { version = "1.16.0", features = ["v4"]}

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1.0"
mime = "0.3"

[lints.clippy]
# Enable pedantic lints at "warn" level
pedantic = "warn"

# Enable various lint groups at different levels
complexity = "warn"
correctness = "warn"
suspicious = "warn"
style = "warn"